2012-11-14  Ulrich Weigand  <uweigand@de.ibm.com>

	* gas/ppc/astest.d: Update for fixup changes.
	* gas/ppc/astest64.d: Likewise.
	* gas/ppc/astest2.d: Likewise.
	* gas/ppc/astest2_64.d: Likewise.
	* gas/ppc/test1elf32.d: Likewise.
	* gas/ppc/test1elf64.d: Likewise.

2012-11-09  David Holsgrove  <david.holsgrove@xilinx.com>

	* gas/microblaze/endian.exp: New file - endian testcase for microblaze / microblazeel.
	* gas/microblaze/endian.s: Likewise.
	* gas/microblaze/endian_be.d: Likewise.
	* gas/microblaze/endian_le.d: Likewise.
	* gas/microblaze/endian_le_elf.d: Likewise.
	* gas/microblaze/reloc_sym.d: Update to accept targets other than elf32-microblaze.
	* gas/microblaze/special_reg.d: Likewise.

2012-11-08  Maciej W. Rozycki  <macro@codesourcery.com>

	* gas/mips/lui.d: New test.
	* gas/mips/micromips@lui.d: New test.
	* gas/mips/lui-1.l: New list test.
	* gas/mips/lui-2.l: New list test.
	* gas/mips/lui.s: New test source.
	* gas/mips/lui-1.s: New test source.
	* gas/mips/lui-2.s: New test source.
	* gas/mips/mips.exp: Run the new tests.

2012-11-07  David Holsgrove  <david.holsgrove@xilinx.com>

	* testsuite/gas/microblaze/special_reg.exp: Add test case.
	* testsuite/gas/microblaze/special_reg.s: Likewise.
	* testsuite/gas/microblaze/special_reg.d: Likewise.

2012-11-01  Chao-ying Fu  <fu@mips.com>

	* gas/mips/micromips-b16.d: New test.
	* gas/mips/micromips-b16.s: New test source.
	* gas/mips/mips.exp: Run the new test.

2012-11-01  Chao-ying Fu  <fu@mips.com>
            Maciej W. Rozycki  <macro@codesourcery.com>

	* gas/mips/micromips-branch-delay.l: Update messages for 16-bit
	delay slot changes.
	* gas/mips/micromips-warn-branch-delay.d: New test.
	* gas/mips/micromips-warn-branch-delay.l: Stderr output for the
	new test.
	* gas/mips/micromips-warn-branch-delay-1.d: New test.
	* gas/mips/micromips-warn-branch-delay.s: New test source.
	* gas/mips/micromips-warn-branch-delay-1.s: New test source.
	* gas/mips/mips.exp: Run the new tests.
