@@ -1,0 +1,24 @@
+#as:
+#objdump: -d
+
+.*: +file format .*
+
+Disassembly of section .text:
+
+00000000 <lbur>:
+   0:	c0000200 	lbur	r0, r0, r0
+
+00000004 <lhur>:
+   4:	c4000200 	lhur	r0, r0, r0
+
+00000008 <lwr>:
+   8:	c8000200 	lwr	r0, r0, r0
+
+0000000c <sbr>:
+   c:	d0000200 	sbr	r0, r0, r0
+
+00000010 <shr>:
+  10:	d4000200 	shr	r0, r0, r0
+
+00000014 <swr>:
+  14:	d8000200 	swr	r0, r0, r0
